[package]
name = "ad-clicker"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/akagiyuu/ad-clicker"

[dependencies]
anyhow = "1.0.98"
chromiumoxide = { version = "0.7.0", default-features = false, features = ["tokio-runtime"] }
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["full"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
